--- a/.github/workflows/check_rss.yml
+++ b/.github/workflows/check_rss.yml
@@ -9,13 +9,17 @@ jobs:
   check-rss:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+
       - name: Install dependencies
         run: pip install feedparser
+
       - name: Run RSS Checker
         run: python msps_checker_rss.py
         env:
